# cv_parser

./: .dockerignore  Dockerfile  README.md  api.py  docx_utils.py  logger.py  parser.py  prompts.py  pyproject.toml  schema.py
static/: index.html
